namespace StringManager.Core.Models
{
    public class ToneInTuning
    {
        public int Id { get; set; }

        public int Position { get; set; }

        public string ToneName { get; set; }

        public double Frequency { get; set; }

        public double WaveLenght { get; set; }
    }
}
